--- a/.github/workflows/dotnet-ci.yml
+++ b/.github/workflows/dotnet-ci.yml
@@ -6,19 +6,36 @@ on:
   pull_request:
     branches: [ master, main ]
 
+permissions:
+  contents: read
+  actions: read
+  security-events: write
+
 jobs:
   build-test:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Setup .NET
         uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: 8.0.x
-          cache: true
-          cache-dependency-path: '**/*.csproj'
+            dotnet-version: 8.0.x
+            cache: true
+            cache-dependency-path: '**/*.csproj'
+
+      - name: SonarCloud Scan
+        uses: SonarSource/sonarcloud-github-action@v2
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        with:
+          args: >
+            -Dsonar.projectKey=YOUR_PROJECT_KEY
+            -Dsonar.organization=YOUR_ORG_KEY
+            -Dsonar.verbose=true
 
       - name: Restore
         run: dotnet restore
