--- a/.github/workflows/dotnet-ci.yml
+++ b/.github/workflows/dotnet-ci.yml
@@ -15,7 +15,7 @@ jobs:
   build-test:
     runs-on: ubuntu-latest
     env:
-      SONAR_TOKEN: ${{ secrets.oeeng }}
+      SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
