Enhance CI pipeline with SonarCloud and .NET setup
Updated `dotnet-ci.yml` to improve the CI pipeline:
- Changed `security-events` permissions to `write`.
- Added workflow steps for repository checkout and .NET setup.
- Configured `actions/setup-dotnet@v4` with caching enabled.
- Integrated SonarCloud for code quality analysis:
  - Added `SONAR_TOKEN` and `SONAR_HOST_URL` to the environment.
  - Used `SonarSource/sonarcloud-github-action@v2` with project-specific arguments.
These changes improve dependency caching, token security, and code scanning.

--- a/.github/workflows/dotnet-ci.yml
+++ b/.github/workflows/dotnet-ci.yml
@@ -14,8 +14,7 @@ permissions:
 jobs:
   build-test:
     runs-on: ubuntu-latest
-    env:
-      SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -25,12 +24,15 @@ jobs:
       - name: Setup .NET
         uses: actions/setup-dotnet@v4
         with:
-            dotnet-version: 8.0.x
-            cache: true
-            cache-dependency-path: '**/*.csproj'
+          dotnet-version: 8.0.x
+          cache: true
+          cache-dependency-path: '**/*.csproj'
 
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@v2
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_HOST_URL: "https://sonarcloud.io"
         with:
           args: >
             -Dsonar.projectKey=YOUR_PROJECT_KEY
