--- a/.github/workflows/dotnet-ci.yml
+++ b/.github/workflows/dotnet-ci.yml
@@ -21,6 +21,11 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Gitleaks Secret Scan
+        uses: gitleaks/gitleaks-action@v2
+        with:
+          args: --redact --verbose
+
       - name: Setup .NET
         uses: actions/setup-dotnet@v4
         with:
